# imgflip-meme-mpc

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.py  test_mens_warehouse.py
src/imgflip_meme_mcp/: __init__.py  imgflip_client.py  server.py  template_matcher.py
